// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterNavigator /> should display related categories 1`] = `
<DocumentFragment>
  <div
    class="filters"
  >
    <div
      class=""
    >
      <div
        class="filter pv3 bb b--muted-4 filterAvailable"
      >
        <div
          class="pointer"
        >
          <div
            class="filterTitle t-heading-7 flex items-center justify-between"
          >
            Categories
            <span
              class="filterIcon"
              style="height: 10px;"
            >
              <div>
                IconCaret
              </div>
            </span>
          </div>
        </div>
        <div
          class="pt2 overflow-y-auto"
          style="max-height: 200px;"
        >
          <div
            style="overflow: hidden; height: 0px;"
          >
            <div
              class="filterContent"
            >
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  Livros
                </span>
              </a>
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  HQs e Mangas
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<FilterNavigator /> should match snapshot with all 1`] = `
<DocumentFragment>
  <div
    class="filters"
  >
    <div
      class=""
    >
      <div
        class="filter pv3 bb b--muted-4 filterAvailable"
      >
        <div
          class="pointer"
        >
          <div
            class="filterTitle t-heading-7 flex items-center justify-between"
          >
            Categories
            <span
              class="filterIcon"
              style="height: 10px;"
            >
              <div>
                IconCaret
              </div>
            </span>
          </div>
        </div>
        <div
          class="pt2 overflow-y-auto"
          style="max-height: 200px;"
        >
          <div
            style="overflow: hidden; height: 0px;"
          >
            <div
              class="filterContent"
            >
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  Eletrônicos
                </span>
              </a>
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  Smartphones
                </span>
              </a>
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  Videogames
                </span>
              </a>
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  TVs
                </span>
              </a>
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  Livros
                </span>
              </a>
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  HQs e Mangas
                </span>
              </a>
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  Roupas
                </span>
              </a>
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  Blusas
                </span>
              </a>
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  Calças
                </span>
              </a>
              <a
                class="mockedLink"
              >
                <span
                  class="t-small c-muted-1 bb db"
                  style="border-color: transparent; border-width: 1px;"
                >
                  Moletom
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
